# splunk-mltk-container-docker

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.3.0  Dockerfile.3.5  Dockerfile.3.5.cpu  Dockerfile.3.5.rapids  Dockerfile.3.5.spark  Dockerfile.3.6.cpu  Dockerfile.3.7.cpu  Dockerfile.3.7.gpu  Dockerfile.3.8.cpu  Dockerfile.3.8.rapids  Dockerfile.3.8.river  Dockerfile.3.9.1.cpu  Dockerfile.3.9.1.gpu  Dockerfile.3.9.1.minimal  Dockerfile.3.9.1.spark  Dockerfile.3.9.cpu  Dockerfile.3.9.gpu  Dockerfile.3.9.rapids  Dockerfile.3.9.river  Dockerfile.3.9.transformers.cpu  Dockerfile.3.9.transformers.gpu  Dockerfile.5.0-preview.cpu  Dockerfile.5.0-preview.minimal  Dockerfile.5.0.0.cpu  Dockerfile.5.0.0.cpu.jupyterhub  Dockerfile.5.0.0.gpu  Dockerfile.5.0.0.minimal.cpu.template  Dockerfile.5.0.0.minimal.gpu.template  Dockerfile.5.0.0.rapids  Dockerfile.5.0.0.river  Dockerfile.5.0.0.spark  Dockerfile.5.1.0.cpu  Dockerfile.5.1.0.gpu  Dockerfile.5.1.0.minimal.cpu.template  Dockerfile.5.1.0.minimal.gpu.template  Dockerfile.5.1.0.spark  Dockerfile.5.1.0.transformers.cpu  (+47 more)
beta_content/conf25_ai_investigator/mcp.custom-query-agent/: .env.example  Dockerfile  README.md  dock  docker-compose.yml  docker-compose__INTERNAL_ONLY.yml  pyproject.toml  server.py  start_sse
beta_content/conf25_ai_investigator/mcp.custom-query-agent/SCRIPTS/: rebuild  reset0  restart  status  stop
beta_content/conf25_ai_investigator/mcp.custom-query-agent/tests/: test_connection.py  test_include_context.py  testall  (+4 more)
beta_content/conf25_ai_investigator/mcp.splunk-mcp-lite/: .dockerignore  .env.example  Dockerfile  README.md  dock  docker-compose.yml  docker-compose__INTERNAL_ONLY.yml  guardrails.py  helpers.py  package-lock.json  package.json  pyproject.toml  server.py  spl_risk_rules.py  splunk_client.py  start_sse
package-dsdlsupport/: build_package.sh  pyproject.toml
package-dsdlsupport/src/dsdlsupport/: SplunkGenerateGraphicsObjects.py  SplunkHEC.py  SplunkSPLMagic.py  SplunkSearch.py  __init__.py
(+478 files in other folders)
