[project]
name = "splunk-mcp-lite"
version = "0.1.0"
description = "Lite MCP server for executing Splunk SPL search queries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "fastmcp>=2.8.0",
    "httpx",
    "python-dotenv",
    "mcp[cli]>=1.3.0"
]

[project.scripts]
splunk-mcp-lite = "server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "helpers", "splunk_client", "guardrails", "spl_risk_rules"]